    * 124kb free space 

Known problems:

    * NOT A BUG in OpenLGTV BCM: FISH protocol connection from Midnight Commander 4.7.0.x does not properly show file/directory names - 'ls' from new BusyBox does support -Q parameter which output is parsed wrong by Midnight Commander 4.7.0.x, solution is to upgrade MC to 4.7.5.x version on PC for FISH connection,
    * /etc/termcap terminal names collision so /bin/top is unusable, but /usr/bin/top is
    * all current versions (0.1.0 - 0.2.0) can't install properly on original firmwares - missing md5sum in original firmware (fixed release should arrive in about 15 minutes) 

Answer for people asking if they can use it if they have already made modifications on 'addon' or 'browser' partitions is YES, the boot script checks for common modifications (symlinks). If it finds them it does not copy and mount the files and does not break already made modifications.

0.2.0a (quick fix release)

    * FIX: nonexistent (in original firmware) md5sum change to sha1sum
    * FIX: revert termcap data to original
    * FIX: update create_img.sh and install.sh to use sha1sum instead of md5sum 

0.2.0b (quick fix2 release)

    * FIX: workaround to enable password for users with password set (BusyBox 'passwd' command haven't done it while changing password) - passwords are enabled at next boot

0.3.0 (WORK IN PROGRESS)

    * FIX: Update BusyBox binary with 'passwd' patch
    * ADD: Changelog file to SVN
    * ADD: update time at boot using NTP servers pool
    * ADD: create /mnt/user/www dir if it does not exist
    * ADD: autoupgrade from USB storage device from /mnt/usb1/Drive1/OpenLGTV_BCM/upgrade/ dir at boot
    * ADD: executing scripts from USB storage device from /mnt/usb1/Drive1/OpenLGTV_BCM/autorun/ dir at boot
    * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
    * WARN: from now on, install.sh makes installation automaticaly and reboots TV after successful flash, without confirmation