@@ -231,6 +231,30 @@ else
     udhcpc eth0
 fi
 
+magic=hsqs
+magic_clean=377377377377
+
+if [ "`head -c4 /dev/mtd4 | od -c | head -n1 | awk '{print $2 $3 $4 $5}'`" != "$magic_clean" ]
+then
+    echo "OpenLGTV_BCM-WARN: lginit partition (mtd4) is not clean, erasing it..." | tee -a /var/log/OpenLGTV_BCM.log
+    flash_eraseall /dev/mtd4 2>&1 | tee -a /var/log/OpenLGTV_BCM.log
+fi
+
+if [ "$country_model" = "EU" ]
+then
+    if [ "`head -c4 /dev/mtd27 | od -c | head -n1 | awk '{print $2 $3 $4 $5}'`" != "$magic_clean" ]
+    then
+	echo "OpenLGTV_BCM-WARN: lginit backup partition (mtd27) is not clean, erasing it..." | tee -a /var/log/OpenLGTV_BCM.log
+	flash_eraseall /dev/mtd27 2>&1 | tee -a /var/log/OpenLGTV_BCM.log
+    fi
+else
+    if [ "`head -c4 /dev/mtd25 | od -c | head -n1 | awk '{print $2 $3 $4 $5}'`" != "$magic_clean" ]
+    then
+	echo "OpenLGTV_BCM-WARN: lginit backup partition (mtd25) is not clean, erasing it..." | tee -a /var/log/OpenLGTV_BCM.log
+	flash_eraseall /dev/mtd25 2>&1 | tee -a /var/log/OpenLGTV_BCM.log
+    fi
+fi
+
 echo "OpenLGTV_BCM-INFO: setting time via NTP server pool" | tee -a /var/log/OpenLGTV_BCM.log
 ntpclient -h pool.ntp.org -s -c 1 > /dev/null 2>&1 &
 
