@@ -110,11 +110,13 @@ Answer for people asking if they can use it if they have already made modificati
 
 0.3.0 (WORK IN PROGRESS)
 
-    * FIX: Update BusyBox binary with 'passwd' patch
+    * FIX: Updated BusyBox binary with 'passwd' patch
     * ADD: Changelog file to SVN
     * ADD: update time at boot using NTP servers pool
     * ADD: create /mnt/user/www dir if it does not exist
     * ADD: autoupgrade from USB storage device from /mnt/usb1/Drive1/OpenLGTV_BCM/upgrade/ dir at boot
+    * ADD: automatic backup to USB storage device if /mnt/usb1/Drive1/OpenLGTV_BCM/make_backup file exists
     * ADD: executing scripts from USB storage device from /mnt/usb1/Drive1/OpenLGTV_BCM/autorun/ dir at boot
+    * ADD: erase lginit partitions at boot if not erased
     * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
     * WARN: from now on, install.sh makes installation automaticaly and reboots TV after successful flash, without confirmation
